auth/networking.yml
--- # Authelia
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
spec:
  parentRefs: [{ name: traefik-gateway, namespace: traefik }]
  hostnames: [identifie.mon.enorme.uk]
  rules:
    - backendRefs:
       - name: authelia
         port: 9091

--- # Kanidm
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: kanidm
spec:
  parentRefs: [{ name: traefik-gateway, sectionName: tls, namespace: traefik }]
  hostnames: [identifie2.mon.enorme.uk]
  rules:
    - backendRefs:
        - name: kanidm
          port: 8443

--- # Policies
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
spec:
  # This applies to all pods in the namespace
  podSelector: {}
  policyTypes: [Ingress, Egress]
  ingress:
    # Allow prometheus to scrape
    - from:
        - namespaceSelector: { matchLabels: { kubernetes.io/metadata.name: monitoring } }
          podSelector: { matchLabels: { app.kubernetes.io/component: scrapper } }
      ports: [{ port: metrics }]
    # Allow traefik to serve http ports
    - from:
        - namespaceSelector: { matchLabels: { kubernetes.io/metadata.name: traefik } }
          podSelector: { matchLabels: { app.kubernetes.io/name: traefik } }
      ports: [{ port: http }, { port: https }]
  egress:
    # Allow DNS
    - to:
        - namespaceSelector: { matchLabels: { kubernetes.io/metadata.name: kube-system } }
          podSelector: { matchLabels: { k8s-app: kube-dns } }
      ports: [{ port: 53 }, { port: 53, protocol: UDP }]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ldap-ingress
spec:
  podSelector: { matchLabels: { app.kubernetes.io/component: ldap } }
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: { matchLabels: { app.kubernetes.io/component: oauth } }
        - namespaceSelector: { matchLabels: { kubernetes.io/metadata.name: jellyfin } }
          podSelector: { matchLabels: { app.kubernetes.io/component: jellyfin } }
      ports: [{ port: ldap }]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-oauth-ldap-intra
spec:
  podSelector: { matchLabels: { app.kubernetes.io/component: oauth } }
  policyTypes: [Egress]
  egress:
    - to: [podSelector: { matchLabels: { app.kubernetes.io/component: ldap } }]
      ports: [{ port: ldap }]
